The invisible navbar will no longer prevent user from pressing items on the page. This is a big improvment

--- a/src/components/styles/Navbar.module.css
+++ b/src/components/styles/Navbar.module.css
@@ -10,7 +10,7 @@ body {
   align-items: stretch;
   gap: 2rem;
   padding: 0;
-  height: 120px;
+  height: 0px;
   position: fixed;
   top: 0;
   left: 0;
